--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
 <div>
-  <header class="header-4"></header>
+  <header class="header-4">
+    <p-menubar [model]="items"></p-menubar>
+  </header>
 </div>
